--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
@@ -31,7 +31,7 @@
                     <li>
                         <a href="@Url.Action("Index","chiTietDHM")">
                             <i class="metismenu-icon">
-                            </i>Đơn vị tham gia
+                            </i>Duyệt đơn vị tham gia
                         </a>
                     </li>
                 </ul>
@@ -39,7 +39,7 @@
             <li>
                 <a href="@Url.Action("Index","BaiDang")">
                     <i class="metismenu-icon  pe-7s-note"> </i>
-                    Đợt tổ chức hiến máu
+                    Duyệt bài đăng
                 </a>
             </li>
             <li>
@@ -56,7 +56,7 @@
             </li>
             <li class="app-sidebar__heading">Chức năng khác</li>
             <li>
-                <a href="/LoginClient/Index">
+                <a href="@Url.Action("Index","LoginClient")"> 
                     <i class="metismenu-icon pe-7s-user"></i>
                     Trang người dùng
                 </a>
