--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DVLK/DanhSachDangKy.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DVLK/DanhSachDangKy.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc
 @using System.Data;
 @{
-    ViewBag.Title = "Danh sách đăng ký đăng ký";
+    ViewBag.Title = "Danh sách đăng ký  ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
