--- a/HiemMauNhanDao/HiemMauNhanDao/Views/Home/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/Home/Index.cshtml
@@ -21,8 +21,8 @@
                             Đừng lo lắng vì lượng máu mình đã mất đi sau khi hiến. Mỗi lần cho máu là mỗi lần cơ thể bạn được kích thích quá trình tái tạo máu mới.
                             Vì vậy hãy cố gắng kết hợp ăn uống và sinh hoạt điều độ, sức khoẻ bạn sẽ tăng lên rất nhiều đấy.
                             Tham gia hiến máu cũng là một cách để bạn kiểm tra sức khoẻ.
-                        </p>
-                        <a href="#" class="btn_2">Tham gia ngay</a>
+                        </p>                      
+                        <a class="btn_2" href="@Url.Action("Index","DTCHM") ">Tham gia ngay</a>
 
                     </div>
                 </div>
@@ -145,10 +145,12 @@
                                             <img src="~/Assets/client/img/icon/feature_2.svg"
                                                  alt="">
                                         </span>
-                                        <h4>Better Future</h4>
+                                        <h4> Người không được hiến máu</h4>
                                         <p>
-                                            Darkness multiply rule Which from without life creature blessed
-                                            give moveth moveth seas make day which divided our have.
+                                            Không đủ tuổi, thiếu cân nặng.
+                                            Không đủ sức khỏe, huyết áp cao hoặc thấp
+                                            Người nghiện rượu, tiêm chích ma túy.
+                                            Người có nguy cơ lây bệnh truyền nhiễm.
                                         </p>
                                     </div>
                                 </div>
@@ -158,10 +160,11 @@
                                             <img src="~/Assets/client/img/icon/feature_2.svg"
                                                  alt="">
                                         </span>
-                                        <h4>Better Future</h4>
+                                        <h4>Trường hợp khác</h4>
                                         <p>
-                                            Darkness multiply rule Which from without life creature blessed
-                                            give moveth moveth seas make day which divided our have.
+                                            Người được phẫu thuật
+                                            Người mắc sốt rét và đang điều trị bệnh sốt rét;
+                                            Người tiêm vắcxin phòng và điều trị bệnh dại;
                                         </p>
                                     </div>
                                 </div>
@@ -253,7 +256,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="single_blog_item">
                     <div class="single_blog_img">
-                        <img src="~/Assets/client/img/doctor/ro2.jpg" alt="doctor">
+                        <img src="~/Assets/client/img/doctor/dat.jpg" alt="doctor">
                         <div class="social_icon">
                             <ul>
                                 <li><a href="#"> <i class="ti-facebook"></i> </a></li>
@@ -265,7 +268,7 @@
                     </div>
                     <div class="single_text">
                         <div class="single_blog_text">
-                            <h3>Ronaldo</h3>
+                            <h3>Thành Đạt</h3>
                             <p>Tham gia 10 lần</p>
                         </div>
                     </div>
