--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/CapnhatTTCN.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/CapnhatTTCN.cshtml
@@ -132,7 +132,7 @@
                                                 <th class="col-lg-6">
                                                     <div>
                                                         <a>Nhóm máu </a>
-                                                        @Html.DropDownListFor(model => model.nhomMau, new[] { new SelectListItem { Text = "Chưa biết"},
+                                                        @Html.DropDownListFor(model => model.nhomMau, new[] { new SelectListItem { Text = "Chưa có"},
                                                                               new SelectListItem { Text = "A +"} , new SelectListItem { Text = "A -" } ,
                                                                               new SelectListItem { Text = "B +" } , new SelectListItem { Text = "B -" } ,
                                                                               new SelectListItem { Text = "AB +" } ,  new SelectListItem { Text = "AB -" } ,
