--- a/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
                                         <a class="dropdown-item" href="@Url.Action("Index","DTCHM") ">Tham gia hiến máu</a>
-                                        <a class="dropdown-item" href="@Url.Action("Index","DkDHM")  ">Tham gia tổ chức</a>
+                                        <a class="dropdown-item" href="@Url.Action("Index","chiTietDHM")  ">Tham gia tổ chức</a>
 
                                     </div>
                                 </li>
