--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/TTSK.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/TTSK.cshtml
@@ -33,169 +33,136 @@
             </div>
 
             <div class="col-lg-8 mb-5 mb-lg-0">
-                <h2>Lưu ý</h2>
-                <table class="mt-10">
-                    <tr>
-                        <th style="width:400px">
-                            <div>
-                                Tra cứu bằng thanh tìm kiếm  <a>  </a>
+                <div class="col-lg-12 col-md-8">
+                    <h3 class="mb-30">Lịch sử tham gia</h3>
+                    <hr>
+                    <div class="panel-body">
+                        @if (TempData["AlertMessage"] != null)
+                        {
+                            <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+                                @TempData["AlertMessage"]
                             </div>
-                        </th>
-                        <th class="col-lg-6">
-                            <div>
-                                Kiểm tra đầy đủ các thông tin   
-                            </div>
-                        </th>
-                        <th></th>
-                    </tr>
-                    <tr>
-                        <th style="width:400px">
-                            <div>
-                                Ấn nút Chọn:  <a>để sử dụng các chức năng khác</a>
-                            </div>
-                        </th>
-                         
+                        }
+                    </div>
+                    <div class="main-card mb-3 card">
+                        <div class="card-body">
+                            <h5 class="card-title">Tìm kiếm</h5>
+                            <form class="">
+                                <div class="form-row">
+                                    <table class="mt-10">
+                                        <tr>
+                                            <th style="width:400px">
+                                                <input placeholder="Nội dung"
+                                                       onfocus="this.placeholder = ''" onblur="this.placeholder = 'Nội dung '" required
+                                                       class="single-input">
+                                                @*<input name="searchString1" value="@ViewBag.SearchString1" id="exampleCity" type="text" class="form-control">*@
+                                            </th>
+                                            <th class="col-lg-6">
+                                                <div>
+                                                    <div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
+                                                    <div class="form-select" id="default-select_1">
+                                                        <select>
+                                                            <option value=" 1">Đợt tổ chức</option>
+                                                            <option value="1">Chưa chọn</option>
+                                                            <option value="1">Hiến máu nhân đạo tháng 10</option>
+                                                            <option value="1">Hiến máu nhân đạo tháng 11</option>
+                                                            <option value="1">Hiến máu nhân đạo tháng 12</option>
+                                                            <option value="1">Hiến máu nhân đạo tháng 01</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </th>
+                                        </tr>
 
-                    </tr>
-                </table>
-                <hr />
- 
-            </div>
-        </div>
+                                    </table>
 
-        <div class="col-lg-12 mb-5 mb-lg-0">
-            <div class="col-lg-12 col-md-8">
-                <h3 class="mb-30">Danh sách người tham gia</h3>
-                <hr>
-                <div class="panel-body">
-                    @if (TempData["AlertMessage"] != null)
-                    {
-                        <div id="AlertBox" class="alert @TempData["AlertType"] hide">
-                            @TempData["AlertMessage"]
+                                </div>
+                                <div>
+                                    <button type="submit" class="mt-2 btn btn-primary">
+                                        <i class="fa fa-search"></i> Tìm kiếm
+                                    </button>
+                                    <button class="mb-2  btn btn-outline-danger" style="margin-top:18px"><i class="fa fa-times-circle"></i> Huỷ</button>
+                                </div>
+                            </form>
                         </div>
-                    }
-                </div>
-                <div class="main-card mb-3 card">
-                    <div class="card-body">
-                        <h5 class="card-title">Tìm kiếm</h5>
-                        <form class="">
-                            <div class="form-row">
-                                <table class="mt-10">
+                    </div>
+                    <div class="main-card mb-3 card">
+                        <div  >
+                            <table class="mb-0 table table-hover table table-bordered">
+                                <tr class="text-center">
+                                    <th>
+                                        STT
+                                    </th>
+                                    <th>
+                                        Tên đợt tổ chức
+                                    </th>
+                                    <th>
+                                        Mã đăng ký
+                                    </th>
+                                    <th>
+                                        Họ tên
+                                    </th>
+                                    <th>
+                                        thời gian khám
+                                    </th>
+                                   
+                                    <th>
+                                        Trạng thái
+                                    </th>
+                                    <th>
+                                        Chức năng
+                                    </th>
+                                </tr>
+                                @{ var i = 1;}
+                                @foreach (var item in Model)
+                                {
                                     <tr>
-                                        <th style="width:400px">
-                                            <input  placeholder="Nội dung"
-                                                   onfocus="this.placeholder = ''" onblur="this.placeholder = 'Nội dung '" required
-                                                   class="single-input">
-                                            @*<input name="searchString1" value="@ViewBag.SearchString1" id="exampleCity" type="text" class="form-control">*@
-                                        </th>
-                                        <th class="col-lg-6">
+                                        <td>
+                                            @i
+                                        </td>
+                                        <td>
+                                            @item.tenDTCHM
+                                        </td>
+                                        <td>
+                                            @item.idPDKHM
+                                        </td>
+                                        <td>
+                                            @item.hoTen
+                                        </td>
+                                        <td>
+                                            @item.tgDuKien
+                                        </td>
+                                        
+
+                                        <td class="text-center">
+                                            <a href="#" class="btn-active" data-id="@item.idPDKHM">@Html.Raw(item.trangThai ? "Đã duyệt" : "Chưa duyệt")</a>
+                                        </td>
+
+                                        <td>
                                             <div>
-                                                <div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
-                                                <div class="form-select" id="default-select_1">
-                                                    <select>
-                                                        <option value=" 1">Đợt tổ chức</option>
-                                                        <option value="1">Chưa chọn</option>
-                                                        <option value="1">Hiến máu nhân đạo tháng 10</option>
-                                                        <option value="1">Hiến máu nhân đạo tháng 11</option>
-                                                        <option value="1">Hiến máu nhân đạo tháng 12</option>
-                                                        <option value="1">Hiến máu nhân đạo tháng 01</option>
-                                                    </select>
+                                                <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
+                                                <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Tình trạng sức khỏe", "Details", new { id = item.IdTTCN })</button>
+                                                    <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xem thông tin đăng ký", "TTDK", new { id = item.IdTTCN })</button>
                                                 </div>
                                             </div>
-                                        </th>
+                                        </td>
                                     </tr>
-
-                                </table>
-
-                            </div>
-                            <div>
-                                <button type="submit" class="mt-2 btn btn-primary">
-                                    <i class="fa fa-search"></i> Tìm kiếm
-                                </button>
-                                <button class="mb-2  btn btn-outline-danger" style="margin-top:18px"><i class="fa fa-times-circle"></i> Huỷ</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="main-card mb-3 card">
-                    <div class="card-body">
-                        <table class="mb-0 table table-hover table table-bordered">
-                            <tr class="text-center">
-                                <th>
-                                    STT
-                                </th>
-                                <th>
-                                    Tên đợt tổ chức
-                                </th>
-                                <th>
-                                    Mã đăng ký
-                                </th>
-                                <th>
-                                    Họ tên
-                                </th>
-                                <th>
-                                    thời gian khám
-                                </th>
-                                <th>
-                                    Số điện thoại
-                                </th>
-                                <th>
-                                    Trạng thái
-                                </th>
-                                <th>
-                                    Chức năng
-                                </th>
-                            </tr>
-                            @{ var i = 1;}
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @i
-                                    </td>
-                                    <td>
-                                        @item.tenDTCHM
-                                    </td>
-                                    <td>
-                                        @item.idPDKHM
-                                    </td>
-                                    <td>
-                                        @item.hoTen
-                                    </td>
-                                    <td>
-                                        @item.tgDuKien
-                                    </td>
-                                    <td>
-                                        @item.soDT
-                                    </td>
-
-                                    <td class="text-center">
-                                        <a href="#" class="btn-active" data-id="@item.idPDKHM">@Html.Raw(item.trangThai ? "Đã duyệt" : "Chưa duyệt")</a>
-                                    </td>
-
-                                    <td>                                      
-                                        <div>
-                                            <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
-                                            <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
-                                                <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Tình trạng sức khỏe", "Details", new { id = item.IdTTCN })</button>
-                                                <button type="button" tabindex="0" class="dropdown-item  "> @Html.ActionLink("Xem thông tin đăng ký", "TTDK", new { id = item.IdTTCN })</button>
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                i++;
-                            }
-                        </table>
-                        <nav class="blog-pagination justify-content-center d-flex">
-                            <ul class="pagination">
-                                @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringDK, @class = "page-link" }))
-                            </ul>
-                        </nav>
+                                    i++;
+                                }
+                            </table>
+                            <nav class="blog-pagination justify-content-center d-flex">
+                                <ul class="pagination">
+                                    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = ViewBag.SearchStringDK, @class = "page-link" }))
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>  
 
-        </div>
+        
     </div>
 </section>
 
