--- a/HiemMauNhanDao/HiemMauNhanDao/Views/chiTietDHM/Create.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/chiTietDHM/Create.cshtml
@@ -56,8 +56,8 @@
 
                             </div>
 
-                            <div class="mt-3 mb-3">
-                                <div class="col-md-offset-2 col-md-10">
+                            <div class="mt-3 mb-3"  >
+                                <div class="col-md-offset-2 col-lg-8" style="left:600px">
                                     <input type="submit" value="Đăng ký" class="btn btn-success" />
                                 </div>
                             </div>
@@ -79,10 +79,13 @@
                                     <p>Thời gian bắt đầu</p>   <p>Thời gian kết thúc </p>
                                 </div>
                                 <table>
-                                    <th style="width:500px"></th>
-                                    <th class="col-lg-8">
-                                        <a style=" margin-top: 10px; float:right " href="#" class="genric-btn primary-border radius">Đăng ký tham gia</a>
-                                    </th>
+                                    <tr>
+                                        <th style="width:500px"></th>
+                                        <th class="col-lg-8">
+                                            <a style=" margin-top: 10px; float:right " href="#" class="genric-btn primary-border radius">Đăng ký tham gia</a>
+                                        </th>
+                                    </tr>
+                                   
                                 </table>
                             </div>
                             <hr />
@@ -97,10 +100,13 @@
                                     <p>Thời gian bắt đầu</p>   <p>Thời gian kết thúc </p>
                                 </div>
                                 <table>
-                                    <th style="width:500px"></th>
-                                    <th class="col-lg-8">
-                                        <a style=" margin-top: 10px; float:right " href="#" class="genric-btn primary-border radius">Đăng ký tham gia</a>
-                                    </th>
+                                    <tr>
+                                        <th style="width:500px"></th>
+                                        <th class="col-lg-8">
+                                            <a style=" margin-top: 10px; float:right " href="#" class="genric-btn primary-border radius">Đăng ký tham gia</a>
+                                        </th>
+                                    </tr>
+                                   
                                 </table>
                             </div>
                             <hr />
