--- a/HiemMauNhanDao/HiemMauNhanDao/Views/chiTietDHM/Create2.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/chiTietDHM/Create2.cshtml
@@ -58,7 +58,7 @@
                             </div>
 
                             <div class="mt-3 mb-3">
-                                <div class="col-md-offset-2 col-md-10">
+                                <div class="col-md-offset-2 col-lg-8"style="left:600px">
                                     <input type="submit" value="Đăng ký" class="btn btn-success" />
                                 </div>
                             </div>
